# multiclipper

./: com.sciocode.multiclipper.json~  meson.build  readme.md
data/: com.sciocode.multiclipper.appdata.xml.in  com.sciocode.multiclipper.desktop.in  com.sciocode.multiclipper.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: HistoricClipboard.vala  HistoryManager.vala  Pin.vala  main.vala  meson.build  multiclipper.gresource.xml  window.ui  window.vala
src/Classes/: HistoryManager.vala  PinManager.vala  StorageManager.vala
src/Data/: Category.vala  HistoricClipboard.vala  Pin.vala
src/Helpers/: StringHelper.vala
src/UI/Styles/: MainWindow.css
src/UI/Widgets/: CategoryWidget.ui  CategoryWidget.vala  HistoryWidget.ui  HistoryWidget.vala  PinWidget.ui  PinWidget.vala
src/UI/Windows/: MainWindow.ui  MainWindow.vala
